tests/ui/imports/issue-32833.edition2018.stderr
error[E0432]: unresolved import `bar::Foo`
  --> $DIR/issue-32833.rs:5:5
   |
LL | use bar::Foo;
   |     ^^^^^^^^ no `Foo` in `bar`

error[E0432]: unresolved import `Foo`
  --> $DIR/issue-32833.rs:8:9
   |
LL |     use Foo;
   |         ^^^ no external crate `Foo`
   |
help: consider importing this unresolved item through its public re-export instead
   |
LL |     use crate::Foo;
   |         +++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
